Understanding the data flow from view to model and model to view in Reactive Forms

--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -1,7 +1,9 @@
 <h3>Favourite Color: (Reactive Form)</h3>
 
 <div>
-    <input type="text" [formControl]="favouriteFormControl" />
+    <input type="text" [formControl]="favouriteColorControl" />
 </div>
 
-<p>Favourite Color:  {{favouriteFormControl.value}} </p>
+<p>Favourite Color:  {{favouriteColorControl.value}} </p>
+
+<button (click)="changeColor()">Change Color</button>
