--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-reactive-form></app-reactive-form>
+<!-- <app-reactive-form></app-reactive-form> -->
 
 <br><br><br>
 
-<!-- <app-template-form></app-template-form> -->
+<app-template-form></app-template-form>
