--- a/src/app/template-form/template-form.component.html
+++ b/src/app/template-form/template-form.component.html
@@ -1,7 +1,7 @@
 <h3>Favourite Color: (Template-driven Form)</h3>
 
 <div>
-    <input type="text" [(ngModel)]="favouriteColor" />
+    <input type="text" [(ngModel)]="favouriteColor" #colorInput="ngModel" #colInput />
 </div>
 
 <p>Favourite Color: {{favouriteColor}} </p>
