Back to basics: Understanding the programattically change of value of FormControl in reactive forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-reactive-form></app-reactive-form>
+<!-- <app-reactive-form></app-reactive-form> -->
 
 <br><br><br>
 
 <!-- <app-template-form></app-template-form> -->
+
+<app-name-editor></app-name-editor>
