Understanding FormGroup in reactive forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,6 @@
 
 <!-- <app-template-form></app-template-form> -->
 
-<app-name-editor></app-name-editor>
+<!-- <app-name-editor></app-name-editor> -->
+
+<app-profile-editor></app-profile-editor>
